fix: fixed broken styles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
-#root {
-  max-width: 1280px;
+ #root {
+/*  max-width: 1280px;*/
   text-align: center;
-  margin: 0 auto;
-}
+  /*margin: 0 auto;*/
+} 
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -38,4 +38,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
