--- a/client/src/utils/reusableComponents/Floaters/Floater.css
+++ b/client/src/utils/reusableComponents/Floaters/Floater.css
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* width: 100vw;
-    min-height: 100vh; */
+    /* width: 100vw; */
+    min-height: 100vh;
     position: relative;
     overflow-x: hidden;
     color: #fefefe;
